# cppclient

./: .gitignore  CMakeLists.txt  README.md  cppclient.js  cppclient.wasm  index.html  main.cpp
src/core/: GameServer.ixx  Inputs.ixx  Viewport.ixx  World.ixx
src/game/: Arena.ixx  ArenaData.ixx  AttributeData.ixx  Attributes.ixx  Camera.ixx  CameraData.ixx  Death.ixx  DeathData.ixx  Entity.ixx  EntityData.ixx  IndicatorData.ixx  Indicators.ixx  Scoreboard.ixx  ScoreboardData.ixx  Tank.ixx  TankData.ixx  UIData.ixx
src/net/: Clientbound.ixx  NetProp.ixx  Reader.ixx  Serverbound.ixx  Servers.ixx  Writer.ixx
src/rendering/: Absolutes.ixx  Canvas.ixx  Extraction.ixx  GameRendering.ixx  Image.ixx
src/ui/: UI.ixx  UIColor.ixx  UIString.ixx
src/ui/components/: Attributes.ixx  Changelog.ixx  GameModes.ixx  NameInput.ixx  Scoreboard.ixx  Statistics.ixx  Upgrades.ixx
src/ui/views/: Menu.ixx
src/ui/widgets/: Button.ixx  Progressbar.ixx  Tooltip.ixx
src/util/: Color.ixx  Interpolation.ixx
